--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,9 @@
             <version>1.1.10</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
